--- a/alexis.html
+++ b/alexis.html
@@ -44,7 +44,7 @@
                         <!-- <label for="">Skills:</label>-->
                         <div>
                             <ul>
-                                <li style="list-style: none;">Hola, soy Alexis Goitia y quiero felicitarte por haber llegado hasta el final de este paso de salvación. Tengo el privilegio de ser  evangelista en la Iglesia Adventista Del Séptimo Día y quiero invitarte a tomar en cuenta estás opciones:
+                             <!--   <li style="list-style: none;">Hola, soy Alexis Goitia y quiero felicitarte por haber llegado hasta el final de este paso de salvación. Tengo el privilegio de ser  evangelista en la Iglesia Adventista Del Séptimo Día y quiero invitarte a tomar en cuenta estás opciones:
                                 </li>
                                 <br>
                                 <li>Si deseas oír reflexiones para  Vencer los Miedos de tu vida: <a
@@ -54,7 +54,7 @@
                                 <li>Si deseas oír reflexiones que te ayuden a estar más cerca de Jesús: <a
                                         href="https://www.youtube.com/watch?v=W1M4tSes8n4&list=PLZ0yIOXiQ3mWoU3lO5OIOqBn0Fi6H1vIK&ab_channel=AlexisGoitia"
                                         style="color: orange;">Presiona Aqui</a>
-                                </li><br>
+                                </li><br>-->
                                 <li>Si quieres profundizar más sobre la decisión de tu bautismo: <a
                                         href="https://www.youtube.com/watch?v=mOO1sISeEBU&list=PLZ0yIOXiQ3mXudD7pyAl3heOUC8_kHc5M&ab_channel=AlexisGoitia"
                                         style="color: orange;">Presiona Aqui</a></li><br>
